[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Levels/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://src/Parallax/GameBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Lobster/Lobster-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/buttons/EndLevel/Resume.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/EndLevel/NextLevel.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/EndLevel/Back.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]

resource_name = "show"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 350, 750 ), Vector2( 350, 580 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Resume:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 570, 730 ), Vector2( 570, 570 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Next:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 810, 730 ), Vector2( 810, 590 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Correct:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, 210 ), Vector2( 0, 210 ), Vector2( -60, 210 ), Vector2( 0, 210 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Incorrect:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9, 1.2, 1.5, 1.7, 1.8 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, -80 ), Vector2( 0, 300 ), Vector2( 0, 300 ), Vector2( -60, 300 ), Vector2( 0, 300 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Correct:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Incorrect:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="EndLevel" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="GameBackground" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Correct" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 1280.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.326549, 0.18869, 0.894531, 1 )
custom_colors/font_color_shadow = Color( 0.00634766, 0, 0.8125, 1 )
text = "Correctas: 99"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Incorrect" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 300.0
margin_right = 1280.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.188235, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.00634766, 0, 0.8125, 1 )
text = "Incorrectas: 99"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resume" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 570.0
margin_top = 570.0
margin_right = 720.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )

[node name="Next" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 810.0
margin_top = 590.0
margin_right = 930.0
margin_bottom = 710.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect" ]

[node name="Back" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_top = 580.0
margin_right = 485.0
margin_bottom = 715.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect" ]

[node name="anim" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = "show"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 2 )
blend_times = [  ]

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


